--- a/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
+++ b/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
@@ -234,7 +234,7 @@
                         }
                     },
                     "y1": {
-                        display: true,
+                        display: "auto",
                         position: 'left',
                         type: 'linear',
                         title: {
@@ -243,7 +243,7 @@
                         },
                     },
                     "y2": {
-                        display: true,
+                        display: "auto",
                         position: 'right',
                         type: 'linear',
                         title: {
