--- a/addons/fitlytics/finnito/fitlytics-theme/resources/css/a17t.css
+++ b/addons/fitlytics/finnito/fitlytics-theme/resources/css/a17t.css
@@ -1,353 +1,4 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-
-/* Document
-   ========================================================================== */
-
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-
-html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-
-/**
- * Remove the margin in all browsers.
- */
-
-body {
-  margin: 0;
-}
-
-/**
- * Render the `main` element consistently in IE.
- */
-
-main {
-  display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-pre {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * Remove the gray background on active links in IE 10.
- */
-
-a {
-  background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-
-abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted; /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Remove the border on images inside links in IE 10.
- */
-
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
-  margin: 0; /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-
-button,
-input { /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-
-button,
-select { /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-
-progress {
-  vertical-align: baseline;
-}
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-
-details {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-
-summary {
-  display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 10+.
- */
-
-template {
-  display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-
-[hidden] {
-  display: none;
-}:root{
+:root{
     --color-neutral-000-fallback:var(--color-neutral-000,#fff);
     --color-neutral-50-fallback:var(--color-neutral-50,#f9fafb);
     --color-neutral-100-fallback:var(--color-neutral-100,#f3f4f6);
@@ -1567,389 +1218,4 @@ template {
 }
 .\!high{
     --fallback-box-shadow:var(--fallback-box-shadow-high)
-}
-.navigation {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
-.table-wrapper {
-    overflow-x: scroll;
-}
-
-.table {
-    white-space: nowrap;
-    width: auto;
-}
-
-.chartContainer {
-    width: 100%;
-}
-
-select {
-    margin-top: 1rem;
-}
-
-.navigation-controls {
-    margin-top: 1rem;
-    text-align: center;
-}
-
-/* ^^^ NEW ^^^ */
-
-.fc .fc-event-time,
-.fc .fc-event-title {
-    padding: 0 1px;
-    white-space: normal;
-}
-
-html,
-body {
-    /*overflow-x: hidden;*/
-    position: relative;
-    min-height: 100vh;
-}
-
-
-h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.navigation-controls {
-    margin-bottom: 1.5rem;
-}
-
-.alert {
-    display: block;
-    max-width: 100%;
-    border-radius: 0.25rem;
-    box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.3);
-    -webkit-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.3);
-    -moz-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.3);
-    padding: 0.5rem 1rem;
-}
-
-.alert p {
-    margin: 0;
-    display: inline-block;
-}
-
-.alert.alert-success {
-    background-color: rgba(186, 220, 88, 0.4);
-    border: 1px solid rgba(186, 220, 88, 1.0);
-    border-left: 4px solid rgba(186, 220, 88, 1.0);
-}
-
-.alert.alert-success::before {
-    content: "\2713";
-}
-
-.alert.alert-info {
-    background-color: rgba(126, 214, 223,1.0);
-}
-
-.alert.alert-warning {
-    background-color: rgba(240, 147, 43,1.0);
-}
-
-.alert.alert-danger {
-    background-color: rgba(235, 77, 75,1.0);
-}
-
-
-
-input,
-textarea {
-    width: 100%;
-}
-
-details {
-    padding: 0.5rem;
-    border: 1px solid #dfe6e9;
-}
-
-details:nth-child(even) {
-    background-color: #f5f6fa;
-}
-
-summary h3 {
-    color: rgba(230, 126, 34, 1.0);
-    display: inline-block;
-}
-
-body h2 {
-    color: #e67e22;
-    font-size: 1.5rem;
-}
-
-h2 {
-    margin: 0;
-}
-
-form h2 {
-    margin-top: 0;
-}
-
-.red {
-    color: #e74c3c;
-}
-
-.green {
-    color: #2ecc71;
-}
-
-h2+p {
-    font-style: italic;
-    margin-top: -2rem;
-}
-
-h3 {
-    color: #16a085
-}
-
-a {
-    color: #00a8ff;
-    text-decoration: none;
-}
-
-.pure-button.button-success {
-    background: rgb(28, 184, 65);
-    /* this is a green */
-}
-
-.pure-button.button-error {
-    background: rgb(202, 60, 60);
-    /* this is a maroon */
-}
-
-.pure-button.button-warning {
-    background: rgb(223, 117, 20);
-    /* this is an orange */
-}
-
-.pure-button.button-secondary {
-    background: rgb(66, 184, 221);
-    /* this is a light blue */
-}
-
-.pure-button.button-xsmall {
-    padding: 0.25rem 0.5rem;
-    color: white;
-}
-
-html body {
-    padding: 0.5rem;
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-items: center;*/
-    /*justify-content: space-between;*/
-    min-height: 100vh;
-    box-sizing: border-box;
-    /*max-width: 100%;*/
-    max-width: 900px;
-    margin: auto;
-}
-
-body .pure-g {
-    letter-spacing: normal;
-}
-
-.forms {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-}
-
-main hr {
-    border: 0;
-    height: 2px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(230, 126, 34, 1.0), rgba(0, 0, 0, 0));
-    margin: 1rem 0;
-}
-
-form {
-    margin: 0.25rem;
-    width: auto;
-    background-color: #f1f2f6;
-    display: inline-block;
-    padding: 0.5rem;
-    border: 1px solid #dcdde1;
-}
-
-table.pure-table {
-    /*margin: 1rem auto;*/
-    
-    white-space: nowrap;
-    max-width: 100%;
-    overflow-x: auto;
-    max-width: 100%;
-    box-sizing: border-box;
-    display: inline-block;
-    vertical-align: top;
-    background-color: white;
-    /*text-align: center;*/
-}
-
-table.shadow {
-    
-}
-
-table.pure-table tr {
-    border-bottom: 1px solid #f5f6fa;
-}
-
-table.blank {
-    background-color: transparent;
-}
-
-table.left {
-    text-align: left;
-}
-
-table.blank td {
-    padding-right: 1rem;
-}
-
-table.pure-table td,
-table.pure-table th {
-    border-left: none;
-}
-
-table.pure-table thead {
-    background-color: #40739e;
-}
-
-table.pure-table thead th {
-    color: white;
-}
-
-.pure-g>div:not(:last-of-type) {
-    margin-bottom: 0.5rem;
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
-    box-sizing: border-box;
-}
-
-.last-row-emphasised tbody tr:last-of-type {
-    border-top: 2px solid black;
-    font-weight: 700;
-}
-
-.training-log {
-    /*background-color: #ecf0f1;*/
-    /*border-radius: 0.25rem;*/
-    /*padding: 0.5rem;*/
-    /*box-sizing: content-box;*/
-    /*max-width: 1000px;*/
-    margin: 1rem auto;
-    /*border: 1px solid #dcdde1;*/
-    /*margin: auto;*/
-}
-
-.training-log>div:nth-child(odd) {
-    background-color: #dfe4ea;
-}
-
-.training-log>div:not(:last-child):not(:first-child) {
-    border-top: 1px solid #57606f;
-}
-
-.training-log>div {
-    padding: 1rem 0.25rem;
-}
-
-.flex-apart {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
-.grid-container {
-    display: grid;
-    grid-template-columns: minmax(300px, 1fr);
-    grid-template-rows: auto auto auto;
-    gap: 0;
-    grid-template-areas:
-        "Date"
-        "Sidebar"
-        "Activities";
-    margin-top: 0.5rem;
-    border-top: 1px solid lightgrey;
-    padding-top: 0.5rem;
-}
-
-.Date {
-    grid-area: Date;
-}
-
-.Sidebar {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.5fr 1.5fr;
-    gap: 0px 0px;
-    grid-template-areas:
-        "Plan"
-        "Note";
-    grid-area: Sidebar;
-}
-
-.Plan {
-    grid-area: Plan;
-    margin-bottom: 0.5rem;
-}
-
-.Note {
-    grid-area: Note;
-    margin: 0.5rem auto 1rem auto;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.Activities {
-    grid-area: Activities;
-    overflow-x: auto;
-    overflow-y: visible;
-    /*border: 1px solid #f1f2f6;*/
-}
-
-@media (min-width: 800px) {
-    .Note {
-        margin: 0.5rem auto;
-    }
-    .grid-container {
-        display: grid;
-        grid-template-columns: 2fr 3fr;
-        grid-template-rows: auto auto;
-        gap: 0 2rem;
-        grid-template-areas:
-            "Date Date"
-            "Sidebar Activities";
-    }
-
-    .chartContainer {
-        width: 50%;
-    }
-
-    .flex-apart {
-        flex-direction: row;
-    }
-
-    .navigation-controls {
-        margin-top: 0;
-    }
-
-    .forms {
-        flex-direction: row;
-        flex-wrap: nowrap;
-    }
-
-    h4 {
-        margin: 0 0 0.5rem 0;
-        
-    }
 }
