--- a/addons/fitlytics/finnito/fitlytics-theme/resources/css/style.css
+++ b/addons/fitlytics/finnito/fitlytics-theme/resources/css/style.css
@@ -1,3 +1,37 @@
+@import "normalize.css";
+@import "a17t.css";
+
+.navigation {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.table-wrapper {
+    overflow-x: scroll;
+}
+
+.table {
+    white-space: nowrap;
+    width: auto;
+}
+
+.chartContainer {
+    width: 100%;
+}
+
+select {
+    margin-top: 1rem;
+}
+
+.navigation-controls {
+    margin-top: 1rem;
+    text-align: center;
+}
+
+/* ^^^ NEW ^^^ */
+
 .fc .fc-event-time,
 .fc .fc-event-title {
     padding: 0 1px;
@@ -11,10 +45,6 @@ body {
     min-height: 100vh;
 }
 
-h4 {
-    margin: 0.5rem 0;
-    
-}
 
 h3 {
     margin-top: 0;
@@ -69,28 +99,9 @@ textarea {
     width: 100%;
 }
 
-header h1 {
-    color: transparent;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-image: #DCE35B;
-    /* fallback for old browsers */
-    background-image: -webkit-linear-gradient(to bottom, #45B649, #DCE35B);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background-image: linear-gradient(to bottom, #45B649, #DCE35B);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-    text-transform: uppercase;
-    font-size: 2rem;
-}
-
 details {
     padding: 0.5rem;
-}
-
-details[open] summary {
-
-    /*margin-bottom: 0.5rem;*/
+    border: 1px solid #dfe6e9;
 }
 
 details:nth-child(even) {
@@ -105,6 +116,10 @@ summary h3 {
 body h2 {
     color: #e67e22;
     font-size: 1.5rem;
+}
+
+h2 {
+    margin: 0;
 }
 
 form h2 {
@@ -263,7 +278,7 @@ table.pure-table thead th {
     /*box-sizing: content-box;*/
     /*max-width: 1000px;*/
     margin: 1rem auto;
-    border: 1px solid #dcdde1;
+    /*border: 1px solid #dcdde1;*/
     /*margin: auto;*/
 }
 
@@ -281,19 +296,10 @@ table.pure-table thead th {
 
 .flex-apart {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: nowrap;
     justify-content: space-between;
-}
-
-.table-wrapper {
-    border-radius: 0.4rem;
-    overflow: hidden;
-    position: relative;
-    border: 1px solid #dcdde1;
-    /*box-shadow: -9px 0px 5px -6px rgba(0, 0, 0, 0.1) inset;
-    -webkit-box-shadow: -9px 0px 5px -6px rgba(0, 0, 0, 0.1) inset;
-    -moz-box-shadow: -9px 0px 5px -6px rgba(0, 0, 0, 0.1) inset;*/
+    align-items: flex-start;
 }
 
 .grid-container {
@@ -327,26 +333,27 @@ table.pure-table thead th {
 
 .Plan {
     grid-area: Plan;
+    margin-bottom: 0.5rem;
 }
 
 .Note {
     grid-area: Note;
-    margin-top: 0.5rem;
-    background-color: rgba(251, 197, 49, 0.6);
-    padding: 0.25rem;
-    border-radius: 0.25rem;
-    box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.3);
-    -webkit-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.3);
-    -moz-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.3);
+    margin: 0.5rem auto 1rem auto;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .Activities {
     grid-area: Activities;
     overflow-x: auto;
-    overflow-y: visible
+    overflow-y: visible;
+    /*border: 1px solid #f1f2f6;*/
 }
 
 @media (min-width: 800px) {
+    .Note {
+        margin: 0.5rem auto;
+    }
     .grid-container {
         display: grid;
         grid-template-columns: 2fr 3fr;
@@ -355,6 +362,18 @@ table.pure-table thead th {
         grid-template-areas:
             "Date Date"
             "Sidebar Activities";
+    }
+
+    .chartContainer {
+        width: 50%;
+    }
+
+    .flex-apart {
+        flex-direction: row;
+    }
+
+    .navigation-controls {
+        margin-top: 0;
     }
 
     .forms {
