--- a/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
+++ b/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
@@ -312,7 +312,7 @@
     document.addEventListener('DOMContentLoaded', function() {
         var calendarEl = document.getElementById('calendar');
         var calendar = new FullCalendar.Calendar(calendarEl, {
-            initialView: 'dayGridMonth',
+            initialView: 'listWeek',
             eventDisplay: "block",
             height: "75vh",
             initialDate: "{{ week_of|date('Y-m-d') }}",
