--- a/addons/fitlytics/finnito/fitlytics-theme/resources/views/layouts/default.twig
+++ b/addons/fitlytics/finnito/fitlytics-theme/resources/views/layouts/default.twig
@@ -80,7 +80,7 @@
 
 <header id="header">
 
-    <h1>{{ setting_value('streams::name', config_get('streams::distribution.name')) }}</h1>
+    <h1 class="heading ~neutral !low">{{ setting_value('streams::name', config_get('streams::distribution.name')) }}</h1>
 
 </header>
 
