Fix: Mobile layout of current week chart & table

--- a/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
+++ b/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
@@ -24,33 +24,35 @@
         </div>
     </div>
     <div class="flex-apart">
-        <table class="table last-row-emphasised card">
-            <thead>
-                <tr>
-                    <th>Sport</th>
-                    <th>Distance</th>
-                    <th>Elevation</th>
-                    <th>Moving Time</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for stat in currentWeekStatisticsByType %}
-                <tr>
-                    <td>{{ stat.type }}</td>
-                    <td>{{ stat.metersToKilometers(stat.distance, 2) }}km</td>
-                    <td>{{ stat.metersToKilometers(stat.elevation, 2) }}km</td>
-                    <td>{{ stat.secondsToHours(stat.moving_time) }}</td>
-                </tr>
-                {% endfor %}
-                <tr>
-                    <td></td>
-                    <td>{{ currentWeekStatisticsByType[0].metersToKilometers(currentWeekStatistics.distance, 2) }}km</td>
-                    <td>{{ currentWeekStatisticsByType[0].metersToKilometers(currentWeekStatistics.elevation, 2) }}km</td>
-                    <td>{{ currentWeekStatisticsByType[0].secondsToHours(currentWeekStatistics.moving_time, 2) }}</td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="chartContainer card">
+        <div class="table-wrapper card ~info !normal">
+            <table class="table last-row-emphasised">
+                <thead>
+                    <tr>
+                        <th>Sport</th>
+                        <th>Distance</th>
+                        <th>Elevation</th>
+                        <th>Moving Time</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for stat in currentWeekStatisticsByType %}
+                    <tr>
+                        <td>{{ stat.type }}</td>
+                        <td>{{ stat.metersToKilometers(stat.distance, 2) }}km</td>
+                        <td>{{ stat.metersToKilometers(stat.elevation, 2) }}km</td>
+                        <td>{{ stat.secondsToHours(stat.moving_time) }}</td>
+                    </tr>
+                    {% endfor %}
+                    <tr>
+                        <td></td>
+                        <td>{{ currentWeekStatisticsByType[0].metersToKilometers(currentWeekStatistics.distance, 2) }}km</td>
+                        <td>{{ currentWeekStatisticsByType[0].metersToKilometers(currentWeekStatistics.elevation, 2) }}km</td>
+                        <td>{{ currentWeekStatisticsByType[0].secondsToHours(currentWeekStatistics.moving_time, 2) }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="chartContainer card ~urge !normal">
             <canvas id="currentWeekChart"></canvas>
             <script>
             document.addEventListener("DOMContentLoaded", function() {
