--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1577,6 +1577,8 @@ template {
 
 .table-wrapper {
     overflow-x: scroll;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
 .table {
@@ -1586,6 +1588,8 @@ template {
 
 .chartContainer {
     width: 100%;
+    box-sizing: border-box;
+    margin-top: 1rem;
 }
 
 select {
@@ -1933,6 +1937,7 @@ table.pure-table thead th {
 
     .chartContainer {
         width: 50%;
+        margin-top: 0;
     }
 
     .flex-apart {
